Revision history for PostgreSQL extension semver.

0.4.0

0.3.0  2012-11-20T19:04:30Z
      - Updated the parser to support an optional dash before the prerelease
        version, and the formatter to always emit a dash for the prerelease
        version. This brings it in line with the final semver 1.0.0
        specification. Thanks to Pieter van de Bruggen for making it happen.

0.2.4  2012-11-02T22:32:30Z
      - Fixed a memory allocation bug that could cause semvers to be displayed
        with missing or garbage characters. Thanks to Andrew "RhodiumToad"
        Gierth for help tracking down and fixing the issue.

0.2.3 2011-11-11T06:55:10Z
      - Fixed the `Makefile` so that the documentation file should properly be
        found and installed by `PGXS`.

0.2.2   2011-05-12T19:01:41
      - Tweaked MultiMarkdown table layout in the docuemntation so that the
        header row is always processed as a header row, rather than a `pre`
        block.
      - Simplified the `CREATE EXTENSION` support in the `Makefile`.

0.2.1 2011-04-20T20:37:05
      - Fixed the metadata file to reflect that the "pair" extension is not
        included in the semver distribution.
      - Added abstract and doc file to the `provides` section of `META.json`.
      - Removed the `NO_PGXS` stuff from `Makefile`, as the PostgreSQL core
        team does not recommend its use outside of the core contrib
        extensions.
      - Added PostgreSQL 9.1 `CREATE EXTENSION` support, including migration
        from an unpackaged install via `CREATE EXTENSION semver FROM
        unpackaged`.
      - Renamed `doc/semver.md` to `doc/semver.mdd`, so that PGXN will parse
        it as MultiMarkdown. This will allow the tables to be properly
        formatted.
      - Removed documentation that semver is implemented as a domain. It
        hasn't been since 0.2.0.
      - Removed Unicode characters `psql` output in the documentation.

0.2.0 2011-02-05T19:32:49